[package]
name = "webview_app"
version = "1.0.0-beta.6"
description = "Simple integration of a web view in an application window for windows and linux similar to Electron"
authors = ["Uwe Riegel <uriegel@hotmail.de>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/uriegel/webview-app"
readme = "README.md"
include = [
    "src/**/*",
    "assets/**/*",
    "Cargo.toml"
]

[dependencies]
include_dir = "0.7.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[target.'cfg(target_os="windows")'.dependencies]
libloading = "0.7"  

[target.'cfg(target_os="linux")'.dependencies]
gtk = { version = "0.9.1", package = "gtk4", features = ["v4_14"] }
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
webkit6 = "0.4.0"
