[package]
name = "webview_app"
version = "1.0.0-beta.24"
description = "Simple integration of a web view in an application window for windows and linux similar to Electron"
authors = ["Uwe Riegel <uriegel@hotmail.de>"]
edition = "2021"
license = "MIT"
documentation = "https://github.com/uriegel/webview-app"
repository = "https://github.com/uriegel/webview-app"
readme = "README.md"
include = [
    "src/**/*",
    "assets/**/*",
    "Cargo.toml"
]

[dependencies]
include_dir = "0.7.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

[target.'cfg(target_os="linux")'.dependencies]
gtk = { version = "0.9.1", package = "gtk4", features = ["v4_14"]}
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
webkit6 = "0.4.0"

[target.'cfg(target_os="windows")'.dependencies]
webview2-com = "0.33.0"
windows-implement = "0.58"
windows-interface = "0.58"
windows-core = "0.58.0"

[target.'cfg(target_os="windows")'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os="windows")'.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_UI_Shell",
]

