[package]
name = "from_resource"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.webview_app]
path = "../../"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"

[profile.release]
panic = 'abort'